# QxGL

./: .clangd  CMakeLists.txt  Doxyfile  README.md
src/: Camera.cpp  Camera.h  CameraDistante.cpp  CameraDistante.h  CameraJogo.cpp  CameraJogo.h  Desenha.cpp  Desenha.h  Model3D.cpp  Model3D.h  OpenTextures.cpp  OpenTextures.h  Transform.cpp  Transform.h  Vetor3D.cpp  Vetor3D.h  camera.cpp  camera.hpp  distant_camera.cpp  distant_camera.hpp  draw.cpp  draw.hpp  extra.cpp  extra.h  extra.hpp  game_camera.hpp  game_gamera.cpp  gui.cpp  gui.h  gui.hpp  model3ds.h  models_loader.cpp  models_loader.hpp  orbit_camera.cpp  orbit_camera.hpp  qxgl.hpp  state.cpp  state.hpp  textures_loader.cpp  textures_loader.hpp  (+8 more)
src/assets_manager/: mesh_loader.hpp  model_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/core/: camera.cpp  camera.hpp  game_camera.cpp  game_camera.hpp  orbit_camera.cpp  orbit_camera.hpp  vector3.cpp  vector3.hpp
src/platform/: glfw_window.cpp  glfw_window.hpp
src/render/: renderer.cpp  renderer.hpp
